[package]
name = "crypteia"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "crypteia"

[lib]
name = "crypteia"
crate-type = ["cdylib"]

[dependencies]
# bin
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
futures = { version = "0.3.30" }
aws-config = "0.53.0"
aws-sdk-ssm = "0.23.0"
lambda-extension = "0.10.0"
# lib
redhook = "2.0"
libc = "0.2.155"
lazy_static = "1.4.0"
# both
serde_json = "1.0.117"

[profile.release]
strip = true
