[package]
name = "crypteia"
version = "2.2.0"
edition = "2021"

[[bin]]
name = "crypteia"

[lib]
name = "crypteia"
crate-type = ["cdylib"]

[dependencies]
# bin
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["full"] }
futures = { version = "0.3.32" }
aws-config = "1.8.18"
aws-sdk-ssm = "1.112.0"
lambda-extension = "0.10.0"
# lib
redhook = "2.0"
libc = "0.2.186"
lazy_static = "1.5.0"
# both
serde_json = "1.0.150"

[profile.release]
strip = true
