[metadata]
name = crypteia
author = Custom Ink (https://customink.com)
description = Crypteia
license = MIT
url = https://github.com/customink/crypteia
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src
